--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@spacebartech/module-template",
+  "name": "@spacebartech/text-input",
   "version": "0.0.0-development",
-  "description": "[NAME OF MODULE]",
-  "main": "dist/[MODULE_NAME].js",
+  "description": "Text input component",
+  "main": "dist/textInput.js",
   "scripts": {
     "test": "mocha --require babel-core/register --colors ./test/test.js",
     "build": "webpack",
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SpacebarTech/node-module-template.git"
+    "url": "git+https://github.com/SpacebarTech/text-input.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/SpacebarTech/node-module-template/issues"
+    "url": "https://github.com/SpacebarTech/input-text/issues"
   },
-  "homepage": "https://github.com/SpacebarTech/node-module-template#readme",
+  "homepage": "https://github.com/SpacebarTech/input-text#readme",
   "devDependencies": {
     "@commitlint/cli": "^7.0.0",
     "@commitlint/config-conventional": "^7.0.1",
