--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "test": "mocha --require babel-core/register --colors ./test/test.js",
     "build": "webpack",
-    "lint": "eslint ./"
+    "lint": "eslint ./",
+    "travis-deploy-once": "travis-deploy-once",
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SpacebarTech/text-input.git"
+    "url": "https://github.com/SpacebarTech/text-input.git"
   },
   "author": "",
   "license": "ISC",
@@ -41,7 +43,7 @@
     "mocha": "^5.2.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^6.0.6",
-    "semantic-release": "^15.7.0",
+    "semantic-release": "^15.9.3",
     "semantic-release-cli": "^4.0.6",
     "travis-deploy-once": "^5.0.1",
     "vue-loader": "^13.0.5",
