fix(include dist): include dist

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0-development",
   "description": "Text input component",
   "main": "dist/textInput.js",
-  "files" : ["/dist"],
+  "files" : ["dist/*"],
   "scripts": {
     "test": "mocha --require babel-core/register --colors ./test/test.js",
     "build": "webpack",
