--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@spacebartech/text-input",
   "version": "0.0.0-development",
   "description": "Text input component",
-  "main": "dist/textinput.js",
+  "main": "dist/index.js",
   "files": [
     "dist/"
   ],
